--- a/Server/SNICKERS.Server.csproj
+++ b/Server/SNICKERS.Server.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.10" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="6.21.61" />
+    <PackageReference Include="Telerik.DataSource.Trial" Version="2.1.3" />
+    <PackageReference Include="Telerik.UI.for.Blazor.Trial" Version="3.7.0" />
   </ItemGroup>
 
   <ItemGroup>
