--- a/Shared/SNICKERS.Shared.csproj
+++ b/Shared/SNICKERS.Shared.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Telerik.DataSource" Version="2.1.3" />
+    <PackageReference Include="Telerik.DataSource.Trial" Version="2.1.3" />
+    <PackageReference Include="Telerik.UI.for.Blazor.Trial" Version="3.7.0" />
   </ItemGroup>
 
   <ItemGroup>
